# DLcomm_benchmark

./: .gitignore  README.md  allreduce.py  collectives.py  config_spec.json  debug.py  jobscript.sh  ml_comm.py  pyproject.toml  requirements.txt  setup.py  test_ccl_logging.py  trace_utils.py
config/: config.yaml
dl_comm/: collectives.py  collectives.txt  dl_comm_main.py  helpers.py  ml_comm.py
dl_comm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
dl_comm/analysis/: __init__.py  bandwidth.py  ccl_parser.py  correctness.py  correctness_new.py
dl_comm/comm/: collectives.py  collectives.txt  comm_setup.py  pytorch_apis.txt
dl_comm/config/: __init__.py  config.yaml  config_new.yaml  config_spec.json  mpi_utils.py  setup_algorithms.py  system_info.py  validation.py
dl_comm/helpers/: __init__.py  helpers.py
dl_comm/profile_apps/: pytorch_xccl.py
dl_comm/timer/: __init__.py  timer.py
dl_comm/utils/: enumerations.py  utility.py
examples/: config.yaml  config_old.yaml  config_org.yaml  jobscript.sh  jobscript_nccl.sh  jobscript_xccl.sh  test.py  test_across.py  test_simple.py
examples/10_rccl_jax/: 10_rccl_jax.yaml  jobscript_all_collectives_scale_rccl.sh
examples/10_ulyss/: 10_ulyss_nccl.yaml  10_ulyss_xccl.yaml  ULYSS.yaml  jobscript_ulyss_nccl.sh  jobscript_ulyss_xccl.sh
examples_dl_scaling/: across.py  across.sh  combined.py  k_all.py  run.sh  within.py
profile_apps/: pytorch_xccl.py
tests/: allreduce.py  dtype_precision.py  reduce.py  run_simple_test.sh  simple_nccl_test.py  test.sh
timer/: timer.py
tools/: logo.py
(+492 files in other folders)
